--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </div>
             <p>&nbsp;</p>
              <p class="approach-text">
-                Our team starts with a discovery process: gathering business requirements, creating digitial wireframe prototypes, conducting usability testing, and presenting multiple design options. Our developers then take the lead to bring your website to fruition. To ensure that the website is successful in meeting clients' requirements, we measure its effectiveness, and offer robust maintenance support packages in order to make any necessary improvements.</p> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, explicabo magni vel officiis sit quibusdam et beatae voluptate, optio harum magnam minus aperiam iure molestiae, officia dolore ullam quo perspiciatis! Quibusdam molestias iure provident error esse harum voluptatem delectus at.</p> 
             <p>&nbsp;</p>
             <h2 class="subhead">Golfer</h2>
                 <hr class="featurette-divider">
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-md-9">
                   <h3>Jenny Lee</h3>
-                <p class="bio-text">Jenny has over 22 years experience in application development and UX/UI design. He started o.park group in 2015 to offer design and web development services to the MIT community. Previously, he worked for the MIT Skoltech Program to help create a communications strategy, build university enterprise software infrastructure, and develop custom applications for reviewing and facilitating scientific research proposals. His career at MIT began in 2001 as a design and web advisor for the Communications Office, and he was responsible for evaluating web technologies and providing technical and design recommendations. He also has experience in developing enterprise level ecommerce, recruiting, and mission critical applications for MIT, Pfizer, and Cornerstone Brands, acquired by the Home Shopping Network (HSN). He has a BA in Graphic Design and an MFA in Interactive Design from Boston University.</p>
+                <p class="bio-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint aut, dignissimos quis tempore numquam perspiciatis ex dolore sequi id unde sunt voluptatibus corporis blanditiis error velit, minima libero eius!</p>
                 </div>
                 </div>
             <p>&nbsp;</p>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="col-md-9">
                   <h3>Allen Mills</h3>
-                <p class="bio-text">Allen has worked with the o.park group team since 2016 and joined full-time in September 2022. She has a chemical engineering degree from UCONN and spent the first 12 years of her career as an air quality inspector at the Connecticut Department of Environmental Protection. She focuses on technical writing, facilitating usability testing, and market research and surveys.</p>
+                <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dicta expedita inventore, delectus alias minima eligendi exercitationem nesciunt? Quo, beatae expedita. Eveniet voluptates soluta quos. Fugiat exercitationem voluptas nostrum veniam veritatis sed optio, quasi dicta!</p>
                 </div>
                 </div>
             
