--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <p id="top">&nbsp;</p>
-        <nav class="navbar navbar-dark fixed-top bg-light">
+        <nav class="navbar navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand logo" href="#top"><img src="images/logoNav.png"></a>
             <div class="nav nav-masthead">
@@ -41,7 +41,7 @@
             <!-- Start Content Container -->
              
             <div class="container">
-              <h2 class="subhead">Web Apps</h2>
+              <h2 class="subhead">WEB APPS</h2>
                 <hr class="featurette-divider">
             <!-- New Row -->
                  <div class="row">
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="col-md-9">
-                  <h3>Jenny Lee</h3>
+                  <h3 class="bio-name">Jenny Lee</h3>
                 <p class="bio-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint aut, dignissimos quis tempore numquam perspiciatis ex dolore sequi id unde sunt voluptatibus corporis blanditiis error velit, minima libero eius!</p>
                 </div>
                 </div>
@@ -201,7 +201,7 @@
                 </div>  
                 </div>
                 <div class="col-md-9">
-                  <h3>Allen Mills</h3>
+                  <h3 class="bio-name">Allen Mills</h3>
                 <p class="bio-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dicta expedita inventore, delectus alias minima eligendi exercitationem nesciunt? Quo, beatae expedita. Eveniet voluptates soluta quos. Fugiat exercitationem voluptas nostrum veniam veritatis sed optio, quasi dicta!</p>
                 </div>
                 </div>
