--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
               <!-- Status message -->
             
                 <div class="headline-area">
-                  <h1 class="display-3">We are a dedicated group of golfers that offer a comprehensive approach to custom digital experience.</h1>
+                  <h1 class="display-3">Hi!<span class="wave">👋</span></h1>
+                  <h2 class="headline-area-subheading">My name is Jenny. I like to code <span class="wave-2">👩‍💻</span> and play golf <span class="wave-3">🏌️‍♀️</span>.</h2>
+                  <h2 class="headline-area-subheading">Check out my work below <span class="wave-4">👇</span> .</h2>
+
                 </div>
             </div>
             <p id="work">&nbsp;</p>
@@ -353,5 +356,7 @@
   }
 };
     </script>
+
+    
 </body>
 </html>
