reverse team photo

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                   <div class="col-md-4">
                     
                     <div class="container2">
-                    <img src="images/print1.jpg" class="image">
-                    <div class="overlay" onclick="openModal();currentSlide(9)">
-                    <div class="overlay-text">The Team</div>
+                    <img src="images/print3.jpg" class="image">
+                    <div class="overlay" onclick="openModal();currentSlide(7)">
+                    <div class="overlay-text">XXIO</div>
                     </div>
                     </div>
               
