--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
                 </div>
                 <div class="col-md-9">
                   <h3 class="bio-name">Jenny Lee</h3>
-                <p class="bio-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint aut, dignissimos quis tempore numquam perspiciatis ex dolore sequi id unde sunt voluptatibus corporis blanditiis error velit, minima libero eius!</p>
+                <p class="bio-text">
+                  Hey there, I'm Jenny Lee, your go-to gal for all things web wizardry and golf greatness! As the brains behind Jenny Lee Web Services, I get to flex my tech muscles, whipping up dynamic user interfaces with ReactJS and AngularJS, while also dabbling in Python (Flask) for some backend magic. From fine-tuning websites on Squarespace to adding that extra oomph with Shopify's e-commerce prowess, I'm all about crafting digital wonders that marry functionality with aesthetics. But wait, there's more! When I'm not buried in code, you'll catch me at Oakmont Country Club, making sure tee-offs go off without a hitch and keeping the golf shop looking like a pro merchandiser's dream. With a background that spans from the greens of professional golf tournaments to the halls of academia, I bring a unique blend of passion and expertise to everything I do, whether it's sinking birdies or slinging code. Let's tee up some success together!
+                </p>
                 </div>
                 </div>
  
