--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <p id="contact">&nbsp;</p>
               <h2 class="subhead">Contact Me</h2>
                 <hr class="featurette-divider">
-                    <p class="contact-text">If you have any questions about my services, please contact me at <a href="mailto:JennyLee1989@gmail.com">JennyLee1989@gmail.com</a></p>
+                    <p class="contact-text">If you have any questions about my services, please contact me at <a href="mailto:info@jennylee.golf">info@jennylee.golf</a></p>
             
             
             <p>&nbsp;</p>
