updates to layout

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
 <h1 class="container-fluid d-none d-md-flex">
 
-  <div class="js-t-line">CREATING</div>
-  <div class="js-t-line">BRANDS</div>
-  <div class="js-t-line">THAT</div>
+  <div class="js-t-line">LEARN</div>
   <div class="js-t-line">INSPIRE</div>
+  <div class="js-t-line">MOTIVATE</div>
 </h1>
 
             <!-- <div class="container">
@@ -44,18 +43,20 @@
 
                 </div>
             </div> -->
-
-            <div class="hero-video container ">
-              <div class="row">
-                <div class="col-md-8">
+<div class="container">
+  <div class="row mt-lg-5">
+            <div class="hero-video col-md-10">
               <video autoplay muted loop id="myVideo">
                 <source src="./images/hero.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
               </video>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-2">
+
             </div>
             </div>
+
+          </div>
             
             <p id="work">&nbsp;</p>
             
