--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
@@ -34,6 +34,7 @@
   <div class="js-t-line">MOTIVATE</div>
 </h1>
 
+
             <!-- <div class="container">
             
                 <div class="headline-area">
@@ -44,8 +45,8 @@
                 </div>
             </div> -->
 <div class="container">
-  <div class="row mt-lg-5">
-            <div class="hero-video col-md-10">
+  <div class="row mt-lg-5 justify-content-center">
+            <div class="hero-video col-12 col-md-10 mt-5 mt-md-0 mt-10">
               <video autoplay muted loop id="myVideo">
                 <source src="./images/hero.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
@@ -67,12 +68,12 @@
                 <hr class="featurette-divider">
             <!-- New Row -->
                  <div class="row">
-                  <div class="col-md-4">
-                  <div class="container2">
-                  <img src="images/web1.png" class="image">
-                  <div class="overlay" onclick="openModal();currentSlide(1)">
-                  <div class="overlay-text">2023 La Hacks - Study Guide App</div>
-                  </div>
+                    <div class="col-md-4 ">
+                      <div class="container2">
+                        <img src="images/web1.png" class="image">
+                        <div class="overlay" onclick="openModal();currentSlide(1)">
+                          <div class="overlay-text">2023 La Hacks - Study Guide App</div>
+                        </div>
                   </div>
             
                   </div>
