speed of scroll

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <h2 class="subhead mt-lg-5">Golfer</h2>
                 <hr class="featurette-divider">
-            <div class="scroller" data-direction="right" data-speed="slow">
+            <div class="scroller" data-direction="right" data-speed="fast">
               <div class="scroller__inner">
                 <img src="images/print1.jpg" alt="" />
                 <img src="images/print2.jpeg" alt="" />
