background color change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p id="top">&nbsp;</p>
         <nav class="navbar  fixed-top" id="topBar">
         <div class="container">
-            <a class="navbar-brand logo" href="#top"><img src="images/logo.png"></a>
+            <a class="navbar-brand logo" href="#top"><img src="images/white_logo.png"></a>
             <div class="nav nav-masthead">
                 <a class="nav-link" href="#work">Work</a>
                 <a class="nav-link" href="#about">About</a>
