style and headline

--- a/index.html
+++ b/index.html
@@ -27,12 +27,53 @@
         </header>
         <main role="main">
 
-<h1 class="container-fluid t-line d-none d-md-flex">
+<!-- <h1 class="container-fluid t-line d-none d-md-flex">
 
   <div class="js-t-line">LEARN</div>
   <div class="js-t-line">INSPIRE</div>
   <div class="js-t-line">MOTIVATE</div>
-</h1>
+</h1> -->
+
+<div class="tagline d-none d-md-grid">
+<div id="text">
+  <div class="line">
+    <p class="word">A</p>
+    <p class="word">Web</p>
+  </div>
+
+  <div class="line">
+    <p class="word">Design</p>
+    <p class="word">&</p>
+  </div>
+
+  <div class="line">
+    <p class="word">Developer</p>
+  </div>
+  <div class="line">
+    <a 
+       id="channel-link" 
+       href="https://google.com" 
+       target="_blank" 
+       class="word fancy"
+    >
+      expert golfer
+    </a>
+  </div>
+
+</div>
+
+<a id="source-link" class="meta-link" href="https://google.com" target="_blank">
+  <i class="fa-solid fa-link"></i>
+  <span>Email</span>
+</a>
+
+<a id="yt-link" class="meta-link" href="https://google.com" target="_blank">
+  <i class="fa-brands fa-youtube"></i>
+  <span>Say Hi</span>
+</a>
+
+</div>
+
 
 <h1 class="container d-md-none mt-10">
   <hr class="featurette-divider">
