--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
        target="_blank" 
        class="word fancy"
     >
-      expert golfer
+      Jenny
+    </a>
+    <a 
+       id="channel-link" 
+       href="https://google.com" 
+       target="_blank" 
+       class="word fancy"
+    >
+      Lee
     </a>
   </div>
 
