--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       Jenny
     </a>
     <a 
-       id="channel-link" 
+       id="channel-link2" 
        href="https://google.com" 
        target="_blank" 
        class="word fancy"
