images update along with navbar color

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="container2">
               <img src="images/web1.png" class="image" />
               <div class="overlay" onclick="openModal();currentSlide(1)">
-                <div class="overlay-text">2023 La Hacks - Study Guide App</div>
+                <div class="overlay-text">Events Projector</div>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
             <div class="container2">
               <img src="images/web7.png" class="image" />
               <div class="overlay" onclick="openModal();currentSlide(7)">
-                <div class="overlay-text">Events Projector</div>
+                <div class="overlay-text">2023 La Hacks - Study Guide App</div>
               </div>
             </div>
           </div>
@@ -255,16 +255,17 @@
         <span class="close cursor" onclick="closeModal()">×</span>
         <div class="modal-content">
           <div class="mySlides" style="display: none">
-            <h2 class="work-title">La Hacks Study Guide</h2>
+            <h2 class="work-title">Events Projector</h2>
             <p class="description">
-              React Frontend and Flask Backend Application
+              Upload images and videos to create a slideshow for events using
+              React/Flask
               <img src="images/website-work1.png" />
             </p>
 
             <div class="caption-container">
               <a
                 class="btn btn-secondary"
-                href="http://pgastudyguide.me"
+                href="https://leemillsgroup.com"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
@@ -360,13 +361,15 @@
           </div>
 
           <div class="mySlides" style="display: none">
-            <h2 class="work-title">Events Projector</h2>
-            <p class="description">Created on React and NodeJS</p>
+            <h2 class="work-title">LA Hacks Project</h2>
+            <p class="description">
+              React Frontend and Flask Backend Application
+            </p>
             <img src="images/website-work7.png" />
             <div class="caption-container">
               <a
                 class="btn btn-secondary"
-                href="https://leemillsgroup.com/"
+                href="http://pgastudyguide.me"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
