photos and href

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="container2">
               <img src="images/web4.png" class="image" />
               <div class="overlay" onclick="openModal();currentSlide(4)">
-                <div class="overlay-text">Tweeter</div>
+                <div class="overlay-text">Kaili Marie</div>
               </div>
             </div>
           </div>
@@ -152,7 +152,7 @@
             <div class="container2">
               <img src="images/web5.png" class="image" />
               <div class="overlay" onclick="openModal();currentSlide(5)">
-                <div class="overlay-text">Golf Shop Assistant</div>
+                <div class="overlay-text">Tecfar Manufacturing</div>
               </div>
             </div>
           </div>
@@ -176,16 +176,26 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="container2"></div>
+            <div class="container2">
+              <img src="images/web8.png" class="image" />
+              <div class="overlay" onclick="openModal();currentSlide(8)">
+                <div class="overlay-text">Tweeter</div>
+              </div>
+            </div>
           </div>
           <div class="col-md-4">
-            <div class="container2"></div>
+            <div class="container2">
+              <img src="images/web9.png" class="image" />
+              <div class="overlay" onclick="openModal();currentSlide(5)">
+                <div class="overlay-text">Golf Shop Assistant</div>
+              </div>
+            </div>
           </div>
         </div>
         <p>&nbsp;</p>
         <p class="approach-text">
-          These projects use ReactJS, AngularJS, Squarespace, Python, openAI,
-          and Shopify.
+          <!-- These projects use ReactJS, AngularJS, Squarespace, Python, openAI,
+          and Shopify. -->
         </p>
         <p class="">&nbsp;</p>
 
@@ -215,9 +225,7 @@
           </div>
           <div class="col-md-9 mt-3">
             <h3 class="bio-name">Jenny Lee</h3>
-            <!-- <p class="bio-text">
-                      Hey there, I'm Jenny Lee, your go-to gal for all things web wizardry and golf greatness! As the brains behind Jenny Lee Web Services, I get to flex my tech muscles, whipping up dynamic user interfaces with ReactJS and AngularJS, while also dabbling in Python (Flask) for some backend magic. From fine-tuning websites on Squarespace to adding that extra oomph with Shopify's e-commerce prowess, I'm all about crafting digital wonders that marry functionality with aesthetics. But wait, there's more! When I'm not buried in code, you'll catch me at Oakmont Country Club, making sure tee-offs go off without a hitch and keeping the golf shop looking like a pro merchandiser's dream. With a background that spans from the greens of professional golf tournaments to the halls of academia, I bring a unique blend of passion and expertise to everything I do, whether it's sinking birdies or slinging code. Let's tee up some success together!
-                    </p> -->
+
             <p class="bio-text">
               Hey there, I'm Jenny Lee, your go-to gal for all things web
               wizardry and golf greatness! As the brains behind Jenny Lee Web
@@ -265,7 +273,7 @@
             <div class="caption-container">
               <a
                 class="btn btn-secondary"
-                href="https://leemillsgroup.com"
+                href="https://alternateshotmarketing.com"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
@@ -310,16 +318,17 @@
           </div>
 
           <div class="mySlides" style="display: none">
-            <h2 class="work-title">Tweeter served on github pages</h2>
+            <h2 class="work-title">Author and Artist</h2>
             <p class="description">
-              This App takes tweets off Twitter and analyzes its sentiment using
-              python.
+              This website is a portfolio of a local artist from Hawaii
+              displaying her books and drawings using basic html, css, and js.
+              The backend is nodejs.
             </p>
             <img src="images/website-work4.png" />
             <div class="caption-container">
               <a
                 class="btn btn-secondary"
-                href="https://jennybenjamina.github.io/Tweeter/"
+                href="https://kailimarie.com"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
@@ -328,16 +337,13 @@
           </div>
 
           <div class="mySlides" style="display: none">
-            <h2 class="work-title">Onboarding help app</h2>
-            <p class="description">
-              Web Application currently being used to help onboard employees
-              using python.
-            </p>
+            <h2 class="work-title">TecFar Manufacturing Inc</h2>
+            <p class="description">This website is made by wordpress.</p>
             <img src="images/website-work5.png" />
             <div class="caption-container">
               <a
                 class="btn btn-secondary"
-                href="https://oakmont-asst-1825624e3f92.herokuapp.com/"
+                href="https://tecfar.com/"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
@@ -370,6 +376,42 @@
               <a
                 class="btn btn-secondary"
                 href="http://pgastudyguide.me"
+                role="button"
+                target="_blank"
+                >Visit Website »</a
+              >
+            </div>
+          </div>
+
+          <div class="mySlides" style="display: none">
+            <h2 class="work-title">Tweeter served on github pages</h2>
+            <p class="description">
+              This App takes tweets off Twitter and analyzes its sentiment using
+              python.
+            </p>
+            <img src="images/website-work8.png" />
+            <div class="caption-container">
+              <a
+                class="btn btn-secondary"
+                href="https://jennybenjamina.github.io/Tweeter/"
+                role="button"
+                target="_blank"
+                >Visit Website »</a
+              >
+            </div>
+          </div>
+
+          <div class="mySlides" style="display: none">
+            <h2 class="work-title">Onboarding help app</h2>
+            <p class="description">
+              Web Application currently being used to help onboard employees
+              using python.
+            </p>
+            <img src="images/website-work9.png" />
+            <div class="caption-container">
+              <a
+                class="btn btn-secondary"
+                href="https://oakmont-asst-1825624e3f92.herokuapp.com/"
                 role="button"
                 target="_blank"
                 >Visit Website »</a
